# gates_plotters_operator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  operator.json
proto/: tercen.proto
src/: main.rs  tercen.rs
src/client/: args.rs  mod.rs  palette.rs  quartiles.rs  query_helper.rs  shapes.rs  utils.rs
src/plotters_utils/: coord.rs  mod.rs  ticks.rs
src/processors/: mod.rs
src/ticks/: mod.rs
