[package]
name = "gates_plotters_operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-build = "0.11.0"
arrow = "51.0.0"
#datafusion = "37.0.0"
polars = { version = "0.39.2", default-features = true, features = ["ipc_streaming", "partition_by", "ipc", "polars-io",  "streaming", "async"] }
#polars-io = "0.39.2"
async-stream = "0.3.5"
plotters = "0.3.5"
clap = { version = "4.2.4", features = ["derive"] }

[build-dependencies]
#tonic-build = "0.11"
tonic-build = { version = "0.11", default-features = false, features = ["prost"] }
cargo-emit = "0.2.1"
