[package]
name = "gates_plotters_operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logicle= { git = "https://github.com/tercen/logicle", tag = "0.1.0" }
base64 = "0.22.0"
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
tonic-build = "0.11.0"
arrow = "51.0.0"
#datafusion = "37.0.0"
polars = { version = "0.39.2", default-features = true, features = ["ipc_streaming", "partition_by", "ipc", "polars-io",  "streaming", "async"] }
#polars-io = "0.39.2"
async-stream = "0.3.5"
plotters = "0.3.5"
clap = { version = "4.2.4", features = ["derive"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
num-format = "0.4.4"

[build-dependencies]
#tonic-build = "0.11"
tonic-build = { version = "0.11", default-features = false, features = ["prost"] }
cargo-emit = "0.2.1"
